<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>gtardif</groupId>
	<artifactId>gameboard</artifactId>
	<packaging>pom</packaging>
	<modules>
		<module>gameboard-webapp</module>
	</modules>

	<name>Gameboard</name>
	<version>1.0-SNAPSHOT</version>
	<inceptionYear>2011</inceptionYear>
	<organization>
		<name>Guillaume Tardif</name>
		<url>http://guillaume.tardif.free.fr/</url>
	</organization>
	
	<properties>
		<spring.version>3.0.5.RELEASE</spring.version>
		<spring.security.version>2.0.5.RELEASE</spring.security.version>
		<jetty.version>8.1.0.RC2</jetty.version>
		<slf4j.version>1.6.1</slf4j.version>
	</properties>

	<profiles>
		<profile>
			<id>Unix</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<infinitest.jvmparameter>-Dawt.toolkit=sun.awt.motif.MToolkit</infinitest.jvmparameter>
			</properties>
		</profile>
		<profile>
			<id>OSX</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<infinitest.jvmparameter>-Dapple.awt.UIElement=true</infinitest.jvmparameter>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<optimize>true</optimize>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<additionalConfig>
						<file>
							<name>infinitest.args</name>
							<content>${infinitest.jvmparameter}</content>
						</file>
						<file>
							<name>infinitest.filters</name>
							<content>.*TestFunctional&#xD;.*TestPackaging&#xD;.*TestQHData&#xD;.*TestAbstract</content>
						</file>
					</additionalConfig>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-server -Xms2G -Xmx2G -XX:MaxPermSize=1G ${infinitest.jvmparameter} -Djava.security.egd=file:/dev/./urandom</argLine>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
				</configuration>
				<executions>
					<execution>
						<id>surefire-it</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<includes>
								<include>**/*TestFunctional.java</include>
							</includes>
						</configuration>
					</execution>
					<execution>
						<id>surefire-verif</id>
						<phase>verify</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<includes>
								<include>**/*TestPackaging.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.log4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
				<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
		</dependency>
	</dependencies>
</project>
